--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0",
-    "next": "14.1.0",
+    "next": "^14.2.35",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "stripe": "^14.21.0"
+  },
+  "engines": {
+    "node": ">=18.18.0"
   }
 }
